added person layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RMA_LV2</string>
+    <string name="picture_of_the_person">Picture of the person</string>
 </resources>
