--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,13 @@
     <string name="app_name">RMA_LV2</string>
     <string name="picture_of_the_person">Picture of the person</string>
     <string name="title">Inspirational People</string>
+    <string name="name">Name</string>
+    <string name="name_hint">A person\'s name</string>
+    <string name="description_hint">What has this person done?</string>
+    <string name="description">Description</string>
+    <string name="picture">Picture</string>
+    <string name="birth_date">Birth date</string>
+    <string name="birth_hint">When was the person born?</string>
+    <string name="browse">Browse</string>
+    <string name="add">Add</string>
 </resources>
