--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="birth_hint">When was the person born?</string>
     <string name="browse">Browse</string>
     <string name="add">Add</string>
+    <string name="quote">Quote:</string>
 </resources>
