--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="browse">Browse</string>
     <string name="add">Add</string>
     <string name="quote">Quote:</string>
+    <string name="add_quote">Add Quote</string>
+    <string name="quote_hint">What quote is this person famous for?</string>
+    <string name="remove">Remove</string>
 </resources>
