--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="picture">Picture</string>
     <string name="birth_date">Birth date</string>
     <string name="birth_hint">When was the person born?</string>
-    <string name="browse">Browse</string>
+    <string name="browse">Browse For Image</string>
     <string name="add">Add</string>
     <string name="quote">Quote:</string>
     <string name="add_quote">Add Quote</string>
